# lab3_seqBased_ADT

./: .gitignore  CMakeLists.txt
inc/tmplInc/: Flist.hpp  FlistSequence.hpp  Hanoi.hpp  ICollection.hpp  Option.hpp  Sequence.hpp  Stack.hpp  StackSequence.hpp  Wrapper.hpp  person.hpp  util.hpp
inc/types/: double.hpp  int.hpp  person.hpp  string.hpp
inc/ui/: mainwindow.hpp
src/console/: main.cpp
src/tmpl/: Flist.tpp  FlistSequence.tpp  Hanoi.cpp  Stack.tpp  StackSequence.tpp
src/ui/: main.cpp  mainwindow.cpp  mainwindow.ui
tests/: CMakeLists.txt  run_all_tests.cpp
